Fix whitespace issues, html/javascript injection on updates screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -299,3 +299,8 @@ span.label {
 .droppable:hover > span.btn-group > a.dropdown-toggle {
 	display: inline-block;
 }
+
+
+.clickable {
+	cursor: pointer;
+}
